[gd_scene load_steps=10 format=3 uid="uid://tc3nbcajbnkq"]

[ext_resource type="Script" path="res://hud.gd" id="1_rb1vs"]
[ext_resource type="Texture2D" uid="uid://xy1b6m8m65kx" path="res://art/scoreblock2.png" id="1_w01i4"]
[ext_resource type="Texture2D" uid="uid://di2pw4eagbug6" path="res://art/scoreblock.png" id="2_umoo8"]
[ext_resource type="FontFile" uid="uid://bp3b8yqtffg18" path="res://fonts/Xolonium-Regular.ttf" id="2_vo6tp"]
[ext_resource type="Texture2D" uid="uid://dpgvgvqr5ccw0" path="res://art/pause.png" id="5_2ayeh"]
[ext_resource type="Texture2D" uid="uid://dlglb1mpdkk1u" path="res://art/gameover.png" id="6_m8yd5"]
[ext_resource type="Texture2D" uid="uid://chprlk2q77572" path="res://art/resume.png" id="7_6npok"]
[ext_resource type="Texture2D" uid="uid://e2qla0yo4sxv" path="res://art/quit.png" id="8_2nh0r"]

[sub_resource type="LabelSettings" id="LabelSettings_6sw2f"]
font = ExtResource("2_vo6tp")
font_size = 42
font_color = Color(0.270588, 0.156863, 0.235294, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_rb1vs")

[node name="ScoreLabel" type="Label" parent="."]
z_index = 1
offset_left = 435.0
offset_right = 600.0
offset_bottom = 55.0
text = "0
"
label_settings = SubResource("LabelSettings_6sw2f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Scoreblock" type="Sprite2D" parent="."]
position = Vector2(510, 35)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_w01i4")

[node name="Scoreblock2" type="Sprite2D" parent="."]
visible = false
position = Vector2(285, 33)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_umoo8")

[node name="Pause" type="Button" parent="."]
offset_left = 7.0
offset_top = 5.0
offset_right = 205.0
offset_bottom = 283.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("5_2ayeh")
flat = true

[node name="Gameover" type="Sprite2D" parent="."]
visible = false
position = Vector2(293, 312)
texture = ExtResource("6_m8yd5")

[node name="Restart" type="Button" parent="."]
visible = false
offset_left = 171.0
offset_top = 494.0
offset_right = 649.0
offset_bottom = 712.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("7_6npok")
flat = true

[node name="Quit" type="Button" parent="."]
visible = false
offset_left = 174.0
offset_top = 638.0
offset_right = 652.0
offset_bottom = 856.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("8_2nh0r")
flat = true

[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
